added disparate impact measure

--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 180
+     "execution_count": 163
     }
    ],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,26 +226,64 @@
     "    predictions = trained_model.predict(X_test)\n",
     "    print(f'Accuracy: {metrics.accuracy_score(y_test, predictions)}\\n')\n",
     "    print('Classification report:')\n",
-    "    print(metrics.classification_report(y_test, predictions, target_names=['Good','Bad'])[:166])\n",
+    "    print(metrics.classification_report(y_test, predictions, target_names=['Good','Bad']))\n",
     "    print('Confusion matrix:')\n",
     "    print(metrics.confusion_matrix(y_test, predictions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 0.7266666666666667\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.85      0.75      0.80       214\n         Bad       0.52      0.67      0.59        86\n\n  \nConfusion matrix:\n[[160  54]\n [ 28  58]]\n"
+      "Accuracy: 0.7266666666666667\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.85      0.75      0.80       214\n         Bad       0.52      0.67      0.59        86\n\n   micro avg       0.73      0.73      0.73       300\n   macro avg       0.68      0.71      0.69       300\nweighted avg       0.76      0.73      0.74       300\n\nConfusion matrix:\n[[160  54]\n [ 28  58]]\n"
      ]
     }
    ],
    "source": [
     "evaluate(nb_classifier, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.6264947488821877\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We also want to measure the disparate impact of a model\n",
+    "def disparate_impact(trained_model, sensitive_value, sensitive_column, desired_label, X_test, y_test):\n",
+    "    data_test = pd.concat([X_test, y_test], axis=1)\n",
+    "\n",
+    "    data_test_unprivileged = data_test[data_test[sensitive_column] == sensitive_value]\n",
+    "    data_test_privileged = data_test[data_test[sensitive_column] != sensitive_value]\n",
+    "\n",
+    "    # measure the rate of good outcomes among the unprivileged applicants\n",
+    "    X_test_up = data_test_unprivileged.iloc[:, :24] \n",
+    "    predictions_up = trained_model.predict(X_test_up)\n",
+    "    good_up = (predictions_up == 1).sum()/len(predictions_up)\n",
+    "\n",
+    "    X_test_p = data_test_privileged.iloc[:, :24] \n",
+    "    predictions_p = trained_model.predict(X_test_p)\n",
+    "    good_p = (predictions_p == 1).sum()/len(predictions_p)\n",
+    "\n",
+    "    print(good_up/good_p)\n",
+    "\n",
+    "    # Measure the \n",
+    "    \n",
+    "\n",
+    "disparate_impact(nb_classifier, 0, 'A13', 1, X_test, y_test)"
    ]
   },
   {
@@ -257,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 0.38666666666666666\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.77      0.13      0.23       203\n         Bad       0.34      0.92      0.49        97\n\n  \nConfusion matrix:\n[[ 27 176]\n [  8  89]]\n"
+      "Accuracy: 0.6354166666666666\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.71      0.50      0.59        50\n         Bad       0.59      0.78      0.67        46\n\n   micro avg       0.64      0.64      0.64        96\n   macro avg       0.65      0.64      0.63        96\nweighted avg       0.65      0.64      0.63        96\n\nConfusion matrix:\n[[25 25]\n [10 36]]\n0.8590455049944506\n"
      ]
     }
    ],
@@ -272,34 +310,44 @@
     "# the aged group has 810 entries, 590 have the positive class\n",
     "# the young group has 190 entries, 110 have the positive class\n",
     "\n",
-    "# sampled data should have 95 young +, young -, old +, old -?\n",
+    "# sampled data should have 80 young +, young -, old +, old -?\n",
+    "young_group = data[data['A13'] == 0]\n",
     "\n",
-    "young_group = data[data['A13'] <= 25]\n",
     "young_pos_group = young_group[young_group['label'] == 1]\n",
+    "young_pos_sample = young_pos_group.sample(n=80, random_state=0)\n",
+    "\n",
     "young_neg_group = young_group[young_group['label'] == 2]\n",
+    "young_neg_sample = young_neg_group.sample(n=80, random_state=0)\n",
     "\n",
-    "aged_group = data[data['A13'] > 25]\n",
+    "aged_group = data[data['A13'] == 1]\n",
+    "\n",
     "aged_pos_group = aged_group[aged_group['label'] == 1]\n",
-    "aged_neg_group = aged_group[aged_group['label'] == 2]\n",
+    "aged_pos_sample = aged_pos_group.sample(n=80, random_state=0)\n",
     "\n",
-    "data_resampled = pd.concat([young_pos_group, young_neg_group, aged_pos_group, aged_neg_group])\n",
+    "aged_neg_group = aged_group[aged_group['label'] == 2]\n",
+    "aged_neg_sample = aged_neg_group.sample(n=80, random_state=0)\n",
+    "\n",
+    "data_resampled = pd.concat([young_pos_sample, young_neg_sample, aged_pos_sample, aged_neg_sample])\n",
     "\n",
     "# TODO check that the index gets redone\n",
     "\n",
-    "features_new = data_resampled.iloc[:, :24] # columns 0 to 19\n",
-    "labels_new = data_resampled.iloc[:, 24] # column 20\n",
+    "features_resampled = data_resampled.iloc[:, :24] # columns 0 to 19\n",
+    "labels_resampled = data_resampled.iloc[:, 24] # column 20\n",
     "\n",
     "# print(features_new.head)\n",
     "# print(labels_new.head)\n",
     "\n",
+    "X_train_resampled, X_test_resampled, y_train_resampled, y_test_resampled = train_test_split(features_resampled, labels_resampled, test_size=0.3, random_state=0) # This also shuffles the data\n",
     "\n",
-    "X_train_new, X_test_new, y_train_new, y_test_new = train_test_split(features_new, labels_new, test_size=0.3, random_state=0) # This also shuffles the data\n",
+    "# print(X_train_new.head)\n",
     "\n",
-    "nb_classifier_resampled_dataset = GaussianNB()\n",
-    "nb_classifier_resampled_dataset.fit(X_train_new, y_train_new)\n",
-    "evaluate(nb_classifier_resampled_dataset, X_test_new, y_test_new)\n",
+    "nb_resampled = GaussianNB()\n",
+    "nb_resampled.fit(X_train_resampled, y_train_resampled)\n",
+    "evaluate(nb_resampled, X_test_resampled, y_test_resampled)\n",
     "\n",
-    " # The accuracy is now terrible."
+    " # The accuracy is now worse\n",
+    "\n",
+    "disparate_impact(nb_resampled, 0, 'A13', 1, X_test_resampled, y_test_resampled)"
    ]
   },
   {
@@ -319,23 +367,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.14944769330734242\n"
+      "0.14944769330734242\n0.0\n"
      ]
     }
    ],
    "source": [
-    "def test_discrimination(data):\n",
-    "    young_group = data[data['A13'] == 0]\n",
-    "    young_pos_group = young_group[young_group['label'] == 1]\n",
-    "    aged_group = data[data['A13'] == 1]\n",
-    "    aged_pos_group = aged_group[aged_group['label'] == 1]\n",
+    "def test_discrimination(dataset, sensitive_value, sensitive_column, desired_class):\n",
+    "    young_group = dataset[dataset[sensitive_column] == sensitive_value]\n",
+    "    young_pos_group = young_group[young_group['label'] == desired_class]\n",
+    "    aged_group = dataset[dataset[sensitive_column] != sensitive_value]\n",
+    "    aged_pos_group = aged_group[aged_group['label'] == desired_class]\n",
     "\n",
     "    # print(young_group.shape[0])\n",
     "    # print(young_pos_group.shape[0])\n",
@@ -345,7 +393,8 @@
     "    discrimination = aged_pos_group.shape[0] / aged_group.shape[0] - young_pos_group.shape[0] / young_group.shape[0]\n",
     "    return discrimination\n",
     "\n",
-    "print(test_discrimination(data))\n"
+    "print(test_discrimination(data, 0, 'A13', 1))\n",
+    "print(test_discrimination(data_resampled, 0, 'A13', 1))\n"
    ]
   },
   {
@@ -364,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -375,13 +424,13 @@
       ]
      },
      "metadata": {},
-     "execution_count": 185
+     "execution_count": 169
     }
    ],
    "source": [
-    "biased_dataset = pd.concat((X_train, y_train), axis=1)\n",
+    "training_data = pd.concat((X_train, y_train), axis=1)\n",
     "\n",
-    "test_discrimination(biased_dataset)\n",
+    "test_discrimination(training_data, 0, 'A13', 1)\n",
     "\n",
     "# print(new_dataset)\n",
     "\n",
@@ -401,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,11 +480,11 @@
     "\n",
     "    candidates_for_promotion = dataset[dataset[sensitive_column] == sensitive_value][dataset['label'] != desired_label]\n",
     "    # print(candidates_for_promotion.shape)\n",
-    "    candidates_for_promotion.sort_values('rank_score', inplace=True, ascending=False) # FIXME if it doesn't work swap the ascending value\n",
+    "    candidates_for_promotion.sort_values('rank_score', inplace=True, ascending=False)\n",
     "    \n",
     "    candidates_for_demotion = dataset[dataset[sensitive_column] != sensitive_value][dataset['label'] == desired_label]\n",
     "    # print(candidates_for_demotion.shape)\n",
-    "    candidates_for_demotion.sort_values('rank_score', inplace=True, ascending=True) # FIXME if it doesn't work swap the ascending value\n",
+    "    candidates_for_demotion.sort_values('rank_score', inplace=True, ascending=True)\n",
     "\n",
     "    rest_of_dataset_1 = dataset[dataset[sensitive_column] == sensitive_value][dataset['label'] == desired_label]\n",
     "    rest_of_dataset_2 = dataset[dataset[sensitive_column] != sensitive_value][dataset['label'] != desired_label]\n",
@@ -448,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 171,
    "metadata": {
     "tags": []
    },
@@ -457,7 +506,21 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:33: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:34: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:33: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:34: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "12 swaps were required to reduce the bias in the dataset\n"
      ]
     }
    ],
@@ -488,36 +551,24 @@
     "        row_cd['label'] = 2\n",
     "        candidates_for_demotion.iloc[[i]] = row_cd\n",
     "\n",
+    "    print(f'{swaps_required} swaps were required to reduce the bias in the dataset')\n",
+    "\n",
     "    \n",
     "    new_dataset = pd.concat([rest_of_dataset, candidates_for_promotion, candidates_for_demotion])\n",
     "    return new_dataset\n",
     "\n",
-    "unbiased_dataset = cnd(biased_dataset, 0, 'A13', 1)"
+    "data_cnd = cnd(training_data, 0, 'A13', 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:33: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:34: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "-0.00045613705576952324\n"
      ]
     }
@@ -527,10 +578,10 @@
     "\n",
     "\n",
     "\n",
-    "features_u = unbiased_dataset.iloc[:, :24] # columns 0 to 24\n",
-    "labels_u = unbiased_dataset.iloc[:, 24] # column 25\n",
+    "X_train_cnd = data_cnd.iloc[:, :24] # columns 0 to 24\n",
+    "Y_train_cnd = data_cnd.iloc[:, 24] # column 25\n",
     "\n",
-    "print(test_discrimination(unbiased_dataset))"
+    "print(test_discrimination(data_cnd, 0, 'A13', 1))"
    ]
   },
   {
@@ -542,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -553,31 +604,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 188
+     "execution_count": 173
     }
    ],
    "source": [
     "# Import and fit a naive bayes model\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "nb_classifier_unbiased = GaussianNB()\n",
-    "nb_classifier_unbiased.fit(features_u, labels_u)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Accuracy: 0.7233333333333334\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.80      0.81      0.81       214\n         Bad       0.52      0.50      0.51        86\n\n  \nConfusion matrix:\n[[174  40]\n [ 43  43]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "evaluate(nb_classifier_unbiased, X_test, y_test)"
+    "nb_cnd = GaussianNB()\n",
+    "nb_cnd.fit(X_train_cnd, Y_train_cnd)"
    ]
   },
   {
@@ -586,6 +620,25 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy: 0.7233333333333334\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.80      0.81      0.81       214\n         Bad       0.52      0.50      0.51        86\n\n   micro avg       0.72      0.72      0.72       300\n   macro avg       0.66      0.66      0.66       300\nweighted avg       0.72      0.72      0.72       300\n\nConfusion matrix:\n[[174  40]\n [ 43  43]]\n0.758914513290729\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(nb_cnd, X_test, y_test)\n",
+    "\n",
+    "disparate_impact(nb_cnd, 0, 'A13', 1, X_test, y_test)"
+   ]
   }
  ]
 }
