--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,10 +170,9 @@
     "features = data.iloc[:, :24] # columns 0 to 24\n",
     "labels = data.iloc[:, 24] # column 25\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0) # This also shuffles the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.5, random_state=0) # This also shuffles the data\n",
     "\n",
     "# print(features.head)\n",
-    "\n",
     "# print(labels.head)"
    ]
   },
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 163
+     "execution_count": 5
     }
    ],
    "source": [
@@ -216,51 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "\n",
-    "def evaluate(trained_model, X_test, y_test):\n",
-    "    predictions = trained_model.predict(X_test)\n",
-    "    print(f'Accuracy: {metrics.accuracy_score(y_test, predictions)}\\n')\n",
-    "    print('Classification report:')\n",
-    "    print(metrics.classification_report(y_test, predictions, target_names=['Good','Bad']))\n",
-    "    print('Confusion matrix:')\n",
-    "    print(metrics.confusion_matrix(y_test, predictions))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Accuracy: 0.7266666666666667\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.85      0.75      0.80       214\n         Bad       0.52      0.67      0.59        86\n\n   micro avg       0.73      0.73      0.73       300\n   macro avg       0.68      0.71      0.69       300\nweighted avg       0.76      0.73      0.74       300\n\nConfusion matrix:\n[[160  54]\n [ 28  58]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "evaluate(nb_classifier, X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0.6264947488821877\n"
-     ]
-    }
-   ],
    "source": [
     "# We also want to measure the disparate impact of a model\n",
     "def disparate_impact(trained_model, sensitive_value, sensitive_column, desired_label, X_test, y_test):\n",
@@ -278,12 +235,45 @@
     "    predictions_p = trained_model.predict(X_test_p)\n",
     "    good_p = (predictions_p == 1).sum()/len(predictions_p)\n",
     "\n",
-    "    print(good_up/good_p)\n",
-    "\n",
-    "    # Measure the \n",
+    "    return good_up/good_p\n",
     "    \n",
     "\n",
-    "disparate_impact(nb_classifier, 0, 'A13', 1, X_test, y_test)"
+    "# disparate_impact(nb_classifier, 0, 'A13', 1, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "def evaluate(trained_model, X_test, y_test):\n",
+    "    predictions = trained_model.predict(X_test)\n",
+    "    print(f'Accuracy: {metrics.accuracy_score(y_test, predictions)}')\n",
+    "    print(f'Disparate impact of classifier: {disparate_impact(trained_model, 0, \"A13\", 1, X_test, y_test)}')\n",
+    "    print('Classification report:')\n",
+    "    print(metrics.classification_report(y_test, predictions, target_names=['Good','Bad']))\n",
+    "    print('Confusion matrix:')\n",
+    "    print(metrics.confusion_matrix(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy: 0.686\nDisparate impact of classifier: 0.4015925480769231\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.84      0.68      0.75       350\n         Bad       0.48      0.70      0.57       150\n\n   micro avg       0.69      0.69      0.69       500\n   macro avg       0.66      0.69      0.66       500\nweighted avg       0.73      0.69      0.70       500\n\nConfusion matrix:\n[[238 112]\n [ 45 105]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(nb_classifier, X_test, y_test)"
    ]
   },
   {
@@ -295,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 0.6354166666666666\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.71      0.50      0.59        50\n         Bad       0.59      0.78      0.67        46\n\n   micro avg       0.64      0.64      0.64        96\n   macro avg       0.65      0.64      0.63        96\nweighted avg       0.65      0.64      0.63        96\n\nConfusion matrix:\n[[25 25]\n [10 36]]\n0.8590455049944506\n"
+      "Accuracy: 0.675\nDisparate impact of classifier: 1.0368532955350815\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.72      0.62      0.67        84\n         Bad       0.64      0.74      0.68        76\n\n   micro avg       0.68      0.68      0.68       160\n   macro avg       0.68      0.68      0.67       160\nweighted avg       0.68      0.68      0.67       160\n\nConfusion matrix:\n[[52 32]\n [20 56]]\n"
      ]
     }
    ],
@@ -311,43 +301,42 @@
     "# the young group has 190 entries, 110 have the positive class\n",
     "\n",
     "# sampled data should have 80 young +, young -, old +, old -?\n",
-    "young_group = data[data['A13'] == 0]\n",
     "\n",
-    "young_pos_group = young_group[young_group['label'] == 1]\n",
-    "young_pos_sample = young_pos_group.sample(n=80, random_state=0)\n",
+    "def resample(dataset):\n",
+    "    young_group = dataset[dataset['A13'] == 0]\n",
     "\n",
-    "young_neg_group = young_group[young_group['label'] == 2]\n",
-    "young_neg_sample = young_neg_group.sample(n=80, random_state=0)\n",
+    "    young_pos_group = young_group[young_group['label'] == 1]\n",
+    "    young_pos_sample = young_pos_group.sample(n=80, random_state=0)\n",
     "\n",
-    "aged_group = data[data['A13'] == 1]\n",
+    "    young_neg_group = young_group[young_group['label'] == 2]\n",
+    "    young_neg_sample = young_neg_group.sample(n=80, random_state=0)\n",
     "\n",
-    "aged_pos_group = aged_group[aged_group['label'] == 1]\n",
-    "aged_pos_sample = aged_pos_group.sample(n=80, random_state=0)\n",
+    "    aged_group = dataset[dataset['A13'] == 1]\n",
     "\n",
-    "aged_neg_group = aged_group[aged_group['label'] == 2]\n",
-    "aged_neg_sample = aged_neg_group.sample(n=80, random_state=0)\n",
+    "    aged_pos_group = aged_group[aged_group['label'] == 1]\n",
+    "    aged_pos_sample = aged_pos_group.sample(n=80, random_state=0)\n",
     "\n",
-    "data_resampled = pd.concat([young_pos_sample, young_neg_sample, aged_pos_sample, aged_neg_sample])\n",
+    "    aged_neg_group = aged_group[aged_group['label'] == 2]\n",
+    "    aged_neg_sample = aged_neg_group.sample(n=80, random_state=0)\n",
     "\n",
-    "# TODO check that the index gets redone\n",
+    "    data_resampled = pd.concat([young_pos_sample, young_neg_sample, aged_pos_sample, aged_neg_sample])\n",
+    "    return data_resampled\n",
     "\n",
-    "features_resampled = data_resampled.iloc[:, :24] # columns 0 to 19\n",
-    "labels_resampled = data_resampled.iloc[:, 24] # column 20\n",
+    "# Resample the dataset\n",
+    "data_resampled = resample(data)\n",
     "\n",
-    "# print(features_new.head)\n",
-    "# print(labels_new.head)\n",
+    "# Split the resampled dataset into training and testing data\n",
+    "features_resampled = data_resampled.iloc[:, :24]\n",
+    "labels_resampled = data_resampled.iloc[:, 24]\n",
+    "X_train_resampled, X_test_resampled, y_train_resampled, y_test_resampled = train_test_split(features_resampled, labels_resampled, test_size=0.5, random_state=0) # This also shuffles the data\n",
     "\n",
-    "X_train_resampled, X_test_resampled, y_train_resampled, y_test_resampled = train_test_split(features_resampled, labels_resampled, test_size=0.3, random_state=0) # This also shuffles the data\n",
-    "\n",
-    "# print(X_train_new.head)\n",
-    "\n",
+    "# Train a Naive Bayes classifier on the resampled dataset\n",
     "nb_resampled = GaussianNB()\n",
     "nb_resampled.fit(X_train_resampled, y_train_resampled)\n",
     "evaluate(nb_resampled, X_test_resampled, y_test_resampled)\n",
     "\n",
-    " # The accuracy is now worse\n",
-    "\n",
-    "disparate_impact(nb_resampled, 0, 'A13', 1, X_test_resampled, y_test_resampled)"
+    "# Measure the disparate impack of the classifier trained on the resampled dataset\n",
+    "# disparate_impact(nb_resampled, 0, 'A13', 1, X_test_resampled, y_test_resampled)"
    ]
   },
   {
@@ -367,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,18 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.11223654731080368"
+       "0.12919896640826867"
       ]
      },
      "metadata": {},
-     "execution_count": 169
+     "execution_count": 11
     }
    ],
    "source": [
@@ -450,11 +439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rank(dataset, sensitive_value, sensitive_column, desired_label):\n",
+    "    # Train a classifier using all the data available\n",
     "    features = dataset.iloc[:, :24] # columns 0 to 24\n",
     "    labels = dataset.iloc[:, 24] # column 25\n",
     "\n",
@@ -497,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -520,7 +510,7 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "12 swaps were required to reduce the bias in the dataset\n"
+      "9 swaps were required to reduce the bias in the dataset\n"
      ]
     }
    ],
@@ -562,22 +552,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "-0.00045613705576952324\n"
+      "0.002808673182788435\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "X_train_cnd = data_cnd.iloc[:, :24] # columns 0 to 24\n",
     "Y_train_cnd = data_cnd.iloc[:, 24] # column 25\n",
     "\n",
@@ -593,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -604,12 +590,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 173
+     "execution_count": 15
     }
    ],
    "source": [
-    "# Import and fit a naive bayes model\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
     "nb_cnd = GaussianNB()\n",
     "nb_cnd.fit(X_train_cnd, Y_train_cnd)"
    ]
@@ -623,21 +607,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy: 0.7233333333333334\n\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.80      0.81      0.81       214\n         Bad       0.52      0.50      0.51        86\n\n   micro avg       0.72      0.72      0.72       300\n   macro avg       0.66      0.66      0.66       300\nweighted avg       0.72      0.72      0.72       300\n\nConfusion matrix:\n[[174  40]\n [ 43  43]]\n0.758914513290729\n"
+      "Evaluating the original (biased) classifier:\nAccuracy: 0.686\nDisparate impact of classifier: 0.4015925480769231\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.84      0.68      0.75       350\n         Bad       0.48      0.70      0.57       150\n\n   micro avg       0.69      0.69      0.69       500\n   macro avg       0.66      0.69      0.66       500\nweighted avg       0.73      0.69      0.70       500\n\nConfusion matrix:\n[[238 112]\n [ 45 105]]\n\n\nEvaluating the CND-trained classifier:\nAccuracy: 0.69\nDisparate impact of classifier: 0.7761834319526627\nClassification report:\n              precision    recall  f1-score   support\n\n        Good       0.81      0.73      0.77       350\n         Bad       0.49      0.61      0.54       150\n\n   micro avg       0.69      0.69      0.69       500\n   macro avg       0.65      0.67      0.65       500\nweighted avg       0.71      0.69      0.70       500\n\nConfusion matrix:\n[[254  96]\n [ 59  91]]\n"
      ]
     }
    ],
    "source": [
-    "evaluate(nb_cnd, X_test, y_test)\n",
+    "print('Evaluating the original (biased) classifier:')\n",
+    "evaluate(nb_classifier, X_test, y_test)\n",
     "\n",
-    "disparate_impact(nb_cnd, 0, 'A13', 1, X_test, y_test)"
+    "print('\\n\\nEvaluating the CND-trained classifier:')\n",
+    "evaluate(nb_cnd, X_test, y_test)"
    ]
   }
  ]
