measured performance on groups

--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 41
     }
    ],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 47
     }
    ],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
@@ -496,10 +496,10 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:25: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:29: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:33: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:26: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:30: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:34: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:35: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "/home/sam/.local/lib/python3.6/site-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 51
     }
    ],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -624,6 +624,51 @@
     "\n",
     "print('\\n\\nEvaluating the CND-trained classifier:')\n",
     "evaluate(nb_cnd, X_test, y_test)"
+   ]
+  },
+  {
+   "source": [
+    "## Compare the performance on minority and majority groups"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "nb_classifier accuracy on the underprivileged group:  0.5384615384615384\nnb_classifier accuracy on the privileged group:  0.7247474747474747\nnb_cnd accuracy on the underprivileged group:  0.6346153846153846\nnb_cnd accuracy on the privileged group:  0.7045454545454546\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_set = pd.concat([X_test, y_test], axis=1)\n",
+    "\n",
+    "test_underprivileged = test_set[test_set['A13'] == 0]\n",
+    "test_privileged = test_set[test_set['A13'] != 0]\n",
+    "\n",
+    "X_test_up = test_underprivileged.iloc[:, :24]\n",
+    "y_test_up = test_underprivileged.iloc[:, 24]\n",
+    "\n",
+    "X_test_p = test_privileged.iloc[:, :24]\n",
+    "y_test_p = test_privileged.iloc[:, 24]\n",
+    "\n",
+    "names = ['nb_classifier', 'nb_cnd']\n",
+    "classifiers = [nb_classifier, nb_cnd]\n",
+    "for i in range(2):\n",
+    "    predictions_up = classifiers[i].predict(X_test_up)\n",
+    "    predictions_p = classifiers[i].predict(X_test_p)\n",
+    "\n",
+    "    accuracy_up = metrics.accuracy_score(y_test_up, predictions_up)\n",
+    "    accuracy_p = metrics.accuracy_score(y_test_p, predictions_p)\n",
+    "\n",
+    "    print(names[i], 'accuracy on the underprivileged group: ', accuracy_up)\n",
+    "    print(names[i], 'accuracy on the privileged group: ', accuracy_p)"
    ]
   }
  ]
